--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "mkdirp": "^1.0.4",
     "graphql": "^16.6.0",
     "graphql-playground-middleware-express": "^1.7.23",
     "graphql-tag": "^2.12.6",
@@ -31,6 +32,7 @@
     "pinia": "^2.0.23",
     "shortid": "^2.2.16",
     "apollo-upload-client" : "^17.0.0",
-    "apollo-upload-server" : "^7.1.0"
+    "apollo-upload-server" : "^7.1.0",
+    "sharp" : "^0.31.2"
   }
 }
