--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-server": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "mkdirp": "^1.0.4",
