--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-graphql": "^0.12.0",
     "mkdirp": "^1.0.4",
     "graphql": "^16.6.0",
+    "graphql-subscriptions" : "^2.0.0",
     "graphql-playground-middleware-express": "^1.7.23",
     "graphql-tag": "^2.12.6",
     "graphql-upload": "^16.0.2",
